# python-turing-machine

./: README.md  pyproject.toml
test-programs/: duplicates.TSP  restBy2.TSP
tmachine/: __init__.py  __main__.py  machine.py
