[tool.poetry]
authors = ["pierrerochet <pierre-rochet@outlook.fr>"]
description = ""
name = "tmachine"
version = "0.1.0"

[tool.poetry.scripts]
tmachine = "tmachine.__main__:app"

[tool.poetry.dependencies]
colorama = "^0.4.4"
python = "^3.9"
tabulate = "^0.8.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
